refactor(racingcar): 구조 변경 및 서비스 계층 분리
- GameController와 GameService를 도입하여 책임 분리
- Controller는 입력과 출력만 담당하도록 역할 최소화
- GameService에서 Game 객체 생성 및 로직 호출 담당
- 도메인 객체(Game, GameCount) 간 의존성을 명확히 정리
- 유지보수와 확장성을 고려한 계층화 구조로 개선